[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project]
name = "AstroToolkit"
version = "1.0.3"
authors = [
  { name="Ethan Moorfield", email="ethan.moorfield@hotmail.co.uk"},
]
description = "A package for the gathering and plotting of astronomical data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/WD-planets/Toolkit"
Issues = "https://github.com/WD-planets/Toolkit/issues"